<resources>
    <string name="app_name">Administrador de tareas</string>

    <!-- Login -->
    <string name="task_manager">Administrador de tareas</string>
    <string name="login">Iniciar Sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Olvidó su contraseña?</string>
    <string name="remember_user">Recordar mi usuario en este dispositivo</string>
    <string name="sign_up">Regístrate</string>

    <!-- Sign up -->
    <string name="create_account">Crear cuenta</string>
    <string name="fullname">Nombre completo</string>
    <string name="already_have_account">Ya tengo una cuenta</string>

    <!-- Recover password -->
    <string name="recover_password">Recuperar contraseña</string>
    <string name="recover">Recuperar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_test">Test</string>

    <string name="is_required">Campo obligatorio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
